docs: Fix and improve Swagger docs
