# docs/swagger.json
@@ -9,10 +9,7 @@
     "info": {
         "description": "Document for the Scribe API",
         "title": "Scribe API",
-        "contact": {
-            "name": "Maxime Cattet",
-            "email": "m[at]skatekrak.com"
-        },
+        "contact": {},
         "license": {
             "name": "AGPLv3"
         },
@@ -121,21 +118,12 @@
                 ],
                 "parameters": [
                     {
-                        "description": "language iso code",
-                        "name": "isoCode",
+                        "description": "Create body",
+                        "name": "body",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "description": "language icon url",
-                        "name": "imageURL",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/lang.CreateBody"
                         }
                     }
                 ],
@@ -202,20 +190,20 @@
                 ],
                 "parameters": [
                     {
+                        "description": "Update body",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/lang.UpdateBody"
+                        }
+                    },
+                    {
                         "type": "string",
                         "description": "Lang ISO Code",
                         "name": "isoCode",
                         "in": "path",
                         "required": true
-                    },
-                    {
-                        "description": "new image url",
-                        "name": "imageURL",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
                     }
                 ],
                 "responses": {
@@ -284,11 +272,6 @@
                 }
             },
             "post": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
                 "tags": [
                     "sources"
                 ],
@@ -300,7 +283,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/CreateBody"
+                            "$ref": "#/definitions/source.CreateBody"
                         }
                     }
                 ],
@@ -328,11 +311,6 @@
         },
         "/sources/order": {
             "patch": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
                 "tags": [
                     "sources"
                 ],
@@ -344,7 +322,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/UpdateBody"
+                            "$ref": "#/definitions/source.UpdateBody"
                         }
                     }
                 ],
@@ -378,11 +356,6 @@
         },
         "/sources/sync-feedly": {
             "patch": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
                 "tags": [
                     "sources"
                 ],
@@ -410,57 +383,7 @@
             }
         },
         "/sources/{sourceID}": {
-            "patch": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "tags": [
-                    "sources"
-                ],
-                "summary": "Update a source",
-                "parameters": [
-                    {
-                        "description": "Update body",
-                        "name": "body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/UpdateBody"
-                        }
-                    },
-                    {
-                        "type": "integer",
-                        "description": "ID of the source",
-                        "name": "sourceID",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/Source"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/JSONError"
-                        }
-                    }
-                }
-            }
-        },
-        "/sources/{sourcesID}": {
             "delete": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
                 "tags": [
                     "sources"
                 ],
@@ -485,6 +408,44 @@
                         "description": "Not Found",
                         "schema": {
                             "$ref": "#/definitions/JSONError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/JSONError"
+                        }
+                    }
+                }
+            },
+            "patch": {
+                "tags": [
+                    "sources"
+                ],
+                "summary": "Update a source",
+                "parameters": [
+                    {
+                        "description": "Update body",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/source.UpdateBody"
+                        }
+                    },
+                    {
+                        "type": "integer",
+                        "description": "ID of the source",
+                        "name": "sourceID",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/Source"
                         }
                     },
                     "500": {
@@ -547,31 +508,6 @@
                     "type": "string"
                 },
                 "type": {
-                    "type": "string"
-                }
-            }
-        },
-        "CreateBody": {
-            "type": "object",
-            "required": [
-                "lang",
-                "type"
-            ],
-            "properties": {
-                "isSkateSource": {
-                    "type": "boolean"
-                },
-                "lang": {
-                    "type": "string"
-                },
-                "type": {
-                    "type": "string",
-                    "enum": [
-                        "vimeo",
-                        "youtube"
-                    ]
-                },
-                "url": {
                     "type": "string"
                 }
             }
@@ -690,7 +626,58 @@
                 }
             }
         },
-        "UpdateBody": {
+        "lang.CreateBody": {
+            "type": "object",
+            "required": [
+                "imageURL",
+                "isoCode"
+            ],
+            "properties": {
+                "imageURL": {
+                    "type": "string"
+                },
+                "isoCode": {
+                    "type": "string"
+                }
+            }
+        },
+        "lang.UpdateBody": {
+            "type": "object",
+            "required": [
+                "imageURL"
+            ],
+            "properties": {
+                "imageURL": {
+                    "type": "string"
+                }
+            }
+        },
+        "source.CreateBody": {
+            "type": "object",
+            "required": [
+                "lang",
+                "type"
+            ],
+            "properties": {
+                "isSkateSource": {
+                    "type": "boolean"
+                },
+                "lang": {
+                    "type": "string"
+                },
+                "type": {
+                    "type": "string",
+                    "enum": [
+                        "vimeo",
+                        "youtube"
+                    ]
+                },
+                "url": {
+                    "type": "string"
+                }
+            }
+        },
+        "source.UpdateBody": {
             "type": "object",
             "properties": {
                 "coverURL": {
